# bitcurator-python-tools

./: .gitignore  README.md  pyproject.toml
bitcurator_python_tools/: build_stoplist.py  bulk_diff.py  bulk_extractor_reader.py  cda2_tool.py  cda_tool.py  identify_filenames.py  post_process_exif.py
licenses/: LICENSE.MIT.md
